# ipopt-rs

ipopt-sys/: Cargo.toml  build.rs
src/: lib.rs
