[package]
name = "ipopt-sys"
version = "0.5.5"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "Raw unsafe Rust bindings to the Ipopt non-linear optimization library."
readme = "README.md"
edition = "2018"

homepage = "https://github.com/elrnv/ipopt-rs"
repository = "https://github.com/elrnv/ipopt-rs"
documentation = "https://docs.rs/ipopt-sys"

keywords = ["non-linear", "optimization", "constrained", "ipopt", "unsafe"]

[dev-dependencies]
approx = "0.3"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
